# turtlebot_unizar

./: README.md  install.sh  setup.bash  setup_robot.sh
basic_modules/: README.md
basic_modules/launch/mapping/: voxblox.launch
basic_modules/src/perception/yolo/: yolo.py  yolo_node.py
install/: entrypoint.md  install_hokuyo_noetic.sh  install_kobuki_noetic.sh  install_turtlebot2_noetic.sh  ros_install.sh  ssh_welcome_msg.md
turtlebot_unizar_bringup/: CMakeLists.txt  README.md  package.xml
turtlebot_unizar_bringup/cfg/: turtlebot_unizar.rviz  turtlebot_unizar_stage.rviz
turtlebot_unizar_bringup/launch/: single_robot.launch  single_robot_gmapping.launch  single_turtlebot_amcl.launch  single_turtlebot_gmapping.launch  single_turtlebot_no_map.launch  single_turtlebot_virtual.launch  voxblox.launch
turtlebot_unizar_bringup/launch/gazebo/: single_turtlebot_gazebo.launch
turtlebot_unizar_bringup/maps/: ada_byron.pgm  ada_byron.yaml  gallery.pgm  gallery.yaml  i3a.world  mapI3A.pgm  mapI3A.world  mapI3A.yaml  nave.pgm  nave.yaml  residence1.pgm  residence1.yaml  simple.pgm  simple.world  simple.yaml
turtlebot_unizar_bringup/scripts/: search_usb.sh
turtlebot_unizar_description/: CMakeLists.txt  package.xml
turtlebot_unizar_description/launch/includes/: description.launch  description.launch.xml
turtlebot_unizar_description/robots/: kobuki_hexagon_hokuyo_top.urdf.xacro  kobuki_hexagons_hokuyo_top.urdf.xacro
turtlebot_unizar_description/urdf/: turtlebot_library.urdf.xacro
turtlebot_unizar_description/urdf/sensors/: gimbal.urdf.xacro  hokuyo.urdf.xacro
(+29 files in other folders)
