<package>
  <name>turtlebot_unizar_description</name>
  <version>0.0.1</version>
  <description>
     turtlebot_unizar_description provides a complete 3D model of the TurtleBot for simulation and visualization. 
  </description>
  <author email="davidmc@unizar.es">David Morilla-Cabello</author>
  <maintainer email="riazuelo@unizar.es">David Morilla-Cabello</maintainer>
  <license>BSD</license>
  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>kobuki_description</run_depend>
  <run_depend>create_description</run_depend>
</package>
